refactor(security): Simplify roles and enhance endpoint security